adding styling according to the given transcription

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h1>Dasmoto's Arts & Crafts</h1>
-    <h2>Brushes</h2>
+    <h1 id="logo">Dasmoto's Arts & Crafts</h1>
+    <h2 id="brushes">Brushes</h2>
     <img src="./resources/media/hacksaw.jpg" alt="This is a picture of the hacksaw brushes"/>
     <h3>Hacksaw Brushes</h3>
     <p>Made of high quality oak, Hacksaw brushes are known for their 
@@ -16,7 +16,7 @@
         Available in  differetn sizes. <strong>Starting at $3.00 / brush.</strong>
     </p>
     
-    <h2>Frames</h2>
+    <h2 id="frames">Frames</h2>
     <img src="./resources/media/frames.jpg" alt="This is a picture of the hacksaw brushes"/>
     <h3>Art Frames (assorted)</h3>
     <p> Assorted frames made of different material, including MDF, birchwood, and PDE.
@@ -24,7 +24,7 @@
     <strong>Starting at $2.00 / frames.</strong>
     </p>
 
-    <h2>Paint</h2>
+    <h2 id="paint">Paint</h2>
     <img src="./resources/media/finnish.jpg" alt="This is a picture of the hacksaw brushes"/>
     <h3>Clean finish paint</h3>
     <p> Importes paint from Finland. Over 256 colors available in-store, varying i quantity 
